objects/tffa__ApplicantRole__c.object
<CustomObject>
    <description>Defines possible roles played by a Party (or Applicant) on an Application. e.g. SOLE_OWNER, JOINT_OWNER, AUTHORIZED_SIGNATORY etc. These roles finally translate to roles on opened accounts. Each role has specific characteristics, that can influence the relationship. e.g.parties with SOLE_OWNER, JOINT_OWNER roles become owners of the account, whereas ones with AGENT, GUARANTOR roles do not. Roles may be categorized based on this nature of relationship. Roles may also have applicable authority list. These control what actions are permitted on the account.</description>
    <fields>
        <fullName>tffa__Authority__c</fullName>
        <description>Defines what authority powers are allowed by the role. A relationship defined with the role contains a subset of these.</description>
        <label>Authority</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ApplicantRoleAuthority</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Category__c</fullName>
        <description>Defines the nature of the role.</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ApplicantRoleCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Code__c</fullName>
        <description>A unique identifier for the role. Usually corresponds to role maintained in core system.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>Additional information describing the role and its use.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks the role as unavailable for consumption.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Label__c</fullName>
        <description>Display text for the role. Displayed in UI screens.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Applicant Role</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>NAME</columns>
        <columns>tffa__Category__c</columns>
        <columns>tffa__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applicant Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>